	- use the first matching interface when using softwarelists
	- fixed memory leaks when using softwarelists
	- fixed driver being executed multiple times without a device when the softwarelist entries don't match any interface
	- use first matching interface when using softwarelists
	- add command-line to output XML
	- added replace_string() to common.c/.h
	- replaced convert_xpath_expr() with replace_string() and got rid of xpath_placeholder_size
	- added allocation logging in LOG_ALLOC define
	- small cleanup to config_read_option_str_ptr()
	- renamed made "driv_inf" from main() global and renamed to "global_driv_inf"
	- moved cleanup_driver_info_list() call to cleanup_and_exit() to avoid leaks in case of premature exit
	- fixed parsing of dipswitches and configurations - only the first one was tested and the others were leaked
	- fixed memory leaks with dipswitches and configurations
	- parse_listxml_element_cfg() now returns if it found the entry in the XML
	- sped up parse_listxml_element() a bit
	- log name of driver, that is being parsed when "verbose" is set to 1
	- added append_string_n() to common.c/.h
	- added mrt_system() to common.c/.h
	- use mrt_system() with Visual Studio
	- cleaned up makefile
	- added libxml2_init() to common.c/.h
	- made everything compile with official libxml2 win32 binaries from ftp://ftp.zlatkovic.com/pub/libxml/
		- had to define IN_LIBXML  and call listxml2_init() for MinGW
		- added dependency to iconv.dll
		- updated libxml2 to 2.7.7 and zlib to 1.2.5
		- Visual Studio builds finally work
	
	create_report
	- added a summary at the end when "dokuwiki_format" is set
	- added support for multiple input folders (separated by ';')
	- updated comparison report to invoke pngcmp and output in HTML
	- added option "output_folder" for comparison reports
	- skip *_listsoftware.xml files
	- added option "recursive"
	- added header to docuwiki format
	- added command-line to docuwiki format